--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -33,26 +33,36 @@
             <% @milestone = e %>
 
 
+            <% if (@milestone.pending?) && (can_modify_milestone?@milestone.id) %>
                 <div class="date-row editable">
-                    <% if @milestone.start_date %>
-                        <div class="calendar"><%= l(@milestone.start_date, format: :long) %></div>
-                    <% end %>
+            <%else%>
+                <div class="date-row">
+            <% end %>
+            <% if @milestone.start_date %>
+                <div class="calendar"><%= l(@milestone.start_date, format: :long) %></div>
+            <% end %>
 
-                    <% if @milestone.due_date %>
-                        <div class="calendar right"><%= l(@milestone.due_date, format: :long) %></div>
-                    <% end %>
+            <% if @milestone.due_date %>
+                <div class="calendar right"><%= l(@milestone.due_date, format: :long) %></div>
+            <% end %>
+
+            <% if (@milestone.pending?) && (can_modify_milestone?@milestone.id) %>
                 </div>
-                <% if can_modify_milestone?e.id %>
+            <%else%>
+                </div>
+            <% end %>
+
+            <% if can_modify_milestone?@milestone.id %>
 
 
-                    <div class="edit-form row">
-                      <%= form_for @milestone do |f| %>
-                          <%= f.hidden_field :category_id %>
+                <div class="edit-form row">
+                  <%= form_for @milestone do |f| %>
+                      <%= f.hidden_field :category_id %>
 
                       <div class="form-group col-xs-6">
                         <%= f.label t('milestones.start_date'), class: "control-label" %>
                         <div class="input-group">
-                              <%= f.text_field :start_date, class: "form-control", id:'start_date' ,value:(@milestone.start_date ? l(@milestone.start_date) : nil), "data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy" %>
+                          <%= f.text_field :start_date, class: "form-control", id:'start_date' ,value:(@milestone.start_date ? l(@milestone.start_date) : nil), "data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy" %>
                           <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
                         </div>
                       </div>
@@ -60,7 +70,7 @@
                       <div class="form-group col-xs-6">
                         <%= f.label t('milestones.due_date'), class: "control-label" %>
                         <div class="input-group">
-                              <%= f.text_field :due_date, class: "form-control" , id:'due_date',value:(@milestone.due_date ? l(@milestone.due_date) : nil) ,"data-provide":"datepicker", 'data-validation':'check_due_date', 'data-validation-format': "dd/mm/yyyy" %>
+                          <%= f.text_field :due_date, class: "form-control" , id:'due_date',value:(@milestone.due_date ? l(@milestone.due_date) : nil) ,"data-provide":"datepicker", 'data-validation':'check_due_date', 'data-validation-format': "dd/mm/yyyy" %>
                           <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
                         </div>
                       </div>
@@ -70,10 +80,10 @@
                       </div>
 
 
-                    </div>
+                      </div>
 
 
-                <% end %> <!-- Form -->
+                  <% end %> <!-- Form -->
 
             <% end %>
 
