vover a lista de proyectos en project show

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -95,7 +95,7 @@
 
           </tbody>
         </table>
-        <%= button_to t(:back), 'javascript:history.go(-1);' %>
+        <b><%= link_to t("project.index.header"), '/projects/' %></b>
         <!--#TEMPORAL: definir a donde tiene que volver, o a donde hay que redirigir.-->
       </div>
     </div>
