--- a/app/views/milestones/_innerform.erb
+++ b/app/views/milestones/_innerform.erb
@@ -59,16 +59,19 @@
           <%= select_tag(:tags, options_from_collection_for_select(@tags, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('milestones.select_tags'), 'style'=> 'width:100%') %>
 
         </div>
-        <div class="form-group col-xs-12">
-          <% if @people.empty? %>
-              <%= m.label t('milestones.cannot_assign')%>
-          <%else%>
-              <%= m.label t('milestones.assign_to'), class: "control-label" %>:<br>
-              <em><%= @person.name+t('milestones.assigned') %></em>
-              <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('milestones.select_people'), 'style'=> 'width:100%') %>
-          <%end%>
-        </div>
+
+        <% unless in_profile %>
+            <div class="form-group col-xs-12">
+              <% if @people.empty? %>
+                  <%= m.label t('milestones.cannot_assign')%>
+              <%else%>
+                  <%= m.label t('milestones.assign_to'), class: "control-label" %>:<br>
+                  <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('milestones.select_people'), 'style'=> 'width:100%') %>
+              <%end%>
+            </div>
+        <% end %>
       </div>
+      <%= m.hidden_field(:people, :value=>@person.id) %>
       <%= m.hidden_field(:created_at, :value=>Time.now) %>
       <%= m.hidden_field(:updated_at, :value=>Time.now) %>
       <%= m.button t('milestones.new.submit'), :type => 'submit', class: "btn btn-default" %>
