Se muestra fecha de completado/rechazado en show de hito y en timeline

--- a/app/views/milestones/_info.html.erb
+++ b/app/views/milestones/_info.html.erb
@@ -13,10 +13,10 @@
 
   <div class="left-pane">
     <% if @milestone.status == 'rejected' %>
-        <p><%= @milestone.deleted_date %></p>
+        <p><%= t('milestones.rejected_date') + l(@milestone.deleted_date, format: :long) %></p>
     <% end %>
     <% if @milestone.status == 'done' %>
-        <p><%= @milestone.completed_date %></p>
+        <p><%= t('milestones.done_date') + l(@milestone.completed_date, format: :long) %></p>
     <% end %>
     <div class="milestone-icon"><%= milestone_icon(@milestone).html_safe %></div>
     <h2><%= @milestone.title %></h2>
