--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -173,6 +173,8 @@ ul#mentors {
     .badge {
       margin-left: 5px;
       background-color: $midnightblue-dark;
+
+     a {color:#FFFFFF;}
     }
   }
 
