Se arregla el estilo de los links en las stats del perfil

--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -174,7 +174,10 @@ ul#mentors {
       margin-left: 5px;
       background-color: $midnightblue-dark;
 
-     a {color:#FFFFFF;}
+      a {
+         color:#FFFFFF;
+         text-decoration: none;
+      }
     }
   }
 
