Se agregan los links a proyects y milestones en el menu

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -36,6 +36,17 @@
                       <span class="sr-only">(current)</span>
                     <% end %>
                   <% end %>
+
+                  <%= link_to projects_path  do %>
+                      <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
+                      <span class="sr-only">(current)</span>
+                  <% end %>
+
+                  <%= link_to milestones_path  do %>
+                      <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
+                      <span class="sr-only">(current)</span>
+                  <% end %>
+
                 </li>
             </ul>
 
