Se agregan los iconos de los links de projects y milestones en el menu

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -37,8 +37,8 @@
                     <% end %>
                   <% end %>
 
-                  <%= link_to projects_path  do %>
-                      <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
+                  <%= link_to  '/projects' do %>
+                      <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
                       <span class="sr-only">(current)</span>
                   <% end %>
 
