Se agrega el highlight en el buscador

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -73,6 +73,18 @@ body {
     min-width: 200px;
 }
 
+.tt-suggestion:hover {
+    cursor: pointer;
+    color: white;
+    background-color: #2980B8;
+}
+
+.tt-suggestion.tt-cursor {
+    color: white;
+    background-color: #2980B8;
+
+}
+
 .search-header{
     background-color: $midnightblue-dark;
     margin: 0 -10px;
