--- a/app/assets/stylesheets/_forms.scss.erb
+++ b/app/assets/stylesheets/_forms.scss.erb
@@ -28,6 +28,8 @@ form.main-form {
             color: white;
             box-shadow: none;
         }
+
+
     }
 
     input, textarea {
@@ -84,4 +86,7 @@ form.main-form {
 
     }
 
+    .btn-default.disabled, .btn-default.disabled:hover, .btn-default.disabled:focus, .btn-default.disabled.focus, .btn-default.disabled:active, .btn-default.disabled.active, .btn-default[disabled], .btn-default[disabled]:hover, .btn-default[disabled]:focus, .btn-default[disabled].focus, .btn-default[disabled]:active, .btn-default[disabled].active, fieldset[disabled] .btn-default, fieldset[disabled] .btn-default:hover, fieldset[disabled] .btn-default:focus, fieldset[disabled] .btn-default.focus, fieldset[disabled] .btn-default:active, fieldset[disabled] .btn-default.active {
+        background-color:#2980B8;
+    }
 }
