--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -89,20 +89,20 @@
 
 <script>
     $(".chzn-select").chosen();
-    if ($('.category').find('option:selected').text()!='Feedback') {
+    if ($('.category').find('option:selected').attr('isfeedback')!='true') {
         $('.feedback_autor').hide();
-    }else{
+    }else {
         $('.feedback_autor').show();
     }
-
 </script>
+
 <script>
     $('.category').change( function() {
-    var selectedValue = $(this).find('option:selected').text();
-        if (selectedValue=='Feedback'){
+        var selectedValue = $(this).find('option:selected').attr('isfeedback');
+        if (selectedValue=='true'){
             $('.feedback_autor').show('slow');
-        }
-        else {
+        }else{
+
             $('.feedback_autor').hide('slow');
             $('.select_author').val('').trigger("select_author:updated");
         }
