--- a/app/views/milestones/index.html.erb
+++ b/app/views/milestones/index.html.erb
@@ -14,6 +14,7 @@
             <td><%= t('milestones.title') %></td>
             <td><%= t('milestones.description') %></td>
             <td><%= t('milestones.category') %></td>
+            <td><%= t('milestones.tags') %></td>
             <td><%= t('milestones.due_date') %></td>
             <td><%= t('milestones.actions') %></td>
           </tr>
@@ -42,6 +43,13 @@
                 </td>
                 <td>
                   <%= m.category.name %>
+                </td>
+                <td>
+                  <ul class="chosen-choices">
+                  <% m.tags.each do |t| %>
+                      <li class="search-choice"><%= t.name %></li>
+                  <% end %>
+                  </ul>
                 </td>
                 <td>
                   <div class="calendar left"><%= m.due_date %></div>
