--- a/app/views/tech_roles/index.html.erb
+++ b/app/views/tech_roles/index.html.erb
@@ -5,9 +5,11 @@
       <div class="table-container">
 
         <h1>
+          <% if current_user_admin? %>
             <%= link_to new_tech_role_path do%>
                 <span class='large-text glyphicon glyphicon-plus table-add-button pull-left'>  </span>
             <% end %>
+          <% end %>
           <%= t('tech_roles.index.header') %>
         </h1>
         <table class="table datatable" data-info="false">
@@ -25,17 +27,21 @@
               <tr>
                 <td><%= t.id %></td>
                 <td><%= t.name %></td>
-                <td><%= link_to edit_tech_role_path(t) do%>
-                      <span class='large-text glyphicon glyphicon-pencil'></span>
-                  <% end %>
-                </td>
-                <td><%= link_to tech_role_path(t),
-                                method: :delete,
-                                data: { confirm: t('tech_roles.delete.sure') } do %>
-                      <span class='large-text glyphicon glyphicon-remove'></span>
-                  <% end %>
-                </td>
-
+                <% if current_user_admin? %>
+                    <td><%= link_to edit_tech_role_path(t) do%>
+                          <span class='large-text glyphicon glyphicon-pencil'></span>
+                      <% end %>
+                    </td>
+                    <td><%= link_to tech_role_path(t),
+                                    method: :delete,
+                                    data: { confirm: t('tech_roles.delete.sure') } do %>
+                          <span class='large-text glyphicon glyphicon-remove'></span>
+                      <% end %>
+                    </td>
+                <%else%>
+                    <td></td>
+                    <td></td>
+                <%end%>
               </tr>
           <% end %>
           </tbody>
