Se arregla el diseño de los badges en las stats del perfil

--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -179,6 +179,9 @@ ul#mentors {
          text-decoration: none;
       }
     }
+    .moove-it-info{
+      display:inline-block;
+    }
   }
 
   .knob-stats {
