--- a/app/views/people/_stats_card.erb
+++ b/app/views/people/_stats_card.erb
@@ -31,7 +31,7 @@
         <%= t('project.zero') %>
     <% end %>
 
-    <span><%= t('project.fulfilled') %></span><span class="badge"><%=@proysend%></span><br>
-    <span><%= t('moove-it-time') %></span><span class="badge"><%= time_ago_in_words(@start_date) %></span>
+
+    <span class="moove-it-info"><%= t('moove-it-time') %></span><span class="badge"><%= time_ago_in_words(@start_date) %></span>
   </div>
 </div>
