--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -234,6 +234,10 @@
     }
 }
 
+.chosen-choices{
+    padding: 0;
+    list-style-type: none;
+}
 
 .chosen-choices li.search-choice {
     list-style-type: none;
@@ -255,6 +259,23 @@
 }
 .chosen-choices li.search-choice span {
     word-wrap:break-word;
+}
+
+.datatable{
+    .description_row, .title_row{
+
+        max-width: 160px;
+        word-wrap:break-word;
+    }
+
+    li{
+        list-style-type: none;
+    }
+
+    ul{
+        padding: 0;
+        list-style-type: none;
+    }
 }
 
 /*.etiquetas{
