--- a/app/views/milestones/index.html.erb
+++ b/app/views/milestones/index.html.erb
@@ -11,10 +11,16 @@
           <thead>
           <tr>
             <td><%= t('milestones.state_title') %></td>
-            <td><%= t('milestones.title') %></td>
-            <td><%= t('milestones.description') %></td>
+            <td class="title_row" ><%= t('milestones.title') %></td>
+            <td class="description_row"><%= t('milestones.description') %></td>
             <td><%= t('milestones.category') %></td>
+            <% if current_user_admin? %>
+                <td><%= t('milestones.people') %></td>
+            <% end %>
             <td><%= t('milestones.tags') %></td>
+            <% if current_user_admin? %>
+                <td><%= t('milestones.start_date') %></td>
+            <% end %>
             <td><%= t('milestones.due_date') %></td>
             <td><%= t('milestones.actions') %></td>
           </tr>
@@ -30,20 +36,29 @@
                   <% end %>
                 </td>
                 <% if (m.status == 'rejected') || (m.status == 'done')  %>
-                    <td style="text-decoration: line-through;">
+                    <td class="description_row" style="text-decoration: line-through;">
                       <%= link_to m.title, milestone_path(m), method: :get%>
                     </td>
                 <% else %>
-                    <td>
+                    <td class="description_row">
                       <%= link_to m.title, milestone_path(m), method: :get%>
                     </td>
                 <% end %>
-                <td>
+                <td class="description_row">
                   <%= m.description.truncate(50) %>
                 </td>
                 <td>
                   <%= m.category.name %>
                 </td>
+                <% if current_user_admin? %>
+                    <td>
+                      <ul>
+                        <% m.people.each do |p| %>
+                            <li><%= link_to p.name, person_path(p.id), method: :get %></li>
+                        <% end %>
+                      </ul>
+                    </td>
+                <% end %>
                 <td>
                   <ul class="chosen-choices">
                   <% m.tags.each do |t| %>
@@ -51,6 +66,11 @@
                   <% end %>
                   </ul>
                 </td>
+                <% if current_user_admin? %>
+                    <td>
+                      <div class="calendar left"><%= m.start_date %></div>
+                    </td>
+                <% end %>
                 <td>
                   <div class="calendar left"><%= m.due_date %></div>
                 </td>
