Se agrega la cantidad de eventos en el desplegable de eventos del perfil

--- a/app/views/people/_events_card.erb
+++ b/app/views/people/_events_card.erb
@@ -1,7 +1,7 @@
 <div id="events-card" class="card events">
 
   <span class="toggle-events glyphicon glyphicon-chevron-down"></span>
-  <h1><%= t('events') %></h1>
+  <h1><%= t('events') %> (<%= @events.length %>)</h1>
   <div class="slider">
     <% if @events %>
         <% @events.each do |e| %>
