Agregado link al autor en el show de hitos

--- a/app/views/milestones/_info.html.erb
+++ b/app/views/milestones/_info.html.erb
@@ -28,11 +28,12 @@
   </div>
   <div class="right-pane">
     <p><%= @milestone.description %></p>
-    <p><%=
-        if feedback? && @milestone.feedback_author
-           t('milestones.author') + ": " + @milestone.feedback_author.name
-        end
-    %></p>
+    <p><%
+        if feedback? && @milestone.feedback_author %>
+            <%=  t('milestones.author') + ": " %>
+           <%= link_to @milestone.feedback_author.name, person_path(@milestone.feedback_author.id), method: :get %>
+        <% end %>
+    </p>
 
 
     <% if (@milestone.pending?) && (can_modify_milestone?@milestone.id) %>
