Se muestra en rojo los hitos vencidos

--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -239,6 +239,7 @@ ul#mentors {
             padding: 10px 10px 10px 0;
             margin-bottom: 10px;
 
+
             .day-of-the-week {
                 position: absolute;
                 left: -40px;
@@ -354,6 +355,10 @@ ul#milestone-list {
             left: -30px;
             @include triangle(left, white);
             clear: both;
+        }
+
+        .expired {
+            background-color: red;
         }
 
         .icon {
