--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -45,6 +45,13 @@
                         <%= t('common.n') %>
                     <% end %>
                   </td>
+                  <td>
+                    <% if current_user_admin? %>
+                      <%= link_to edit_person_path(p) do %>
+                        <span class='large-text glyphicon glyphicon-pencil'></span>
+                      <% end %>
+                    <%end%>
+                  </td>
                 </tr>
             <% end %>
 
