--- a/app/views/people/_events_card.erb
+++ b/app/views/people/_events_card.erb
@@ -12,7 +12,7 @@
                     <div class="content">
                         <div>
                         <div class="month-and-year"><%=l(e.due_date, format: "%B %Y")%></div>
-                        <h2><%=e.title%></h2>
+                        <h2><%= link_to e.title, milestone_path(e), method: :get%></h2>
                         </div>
                         <div class="documents"><%= milestone_short_info(e) %></div>
                 </div>
