--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,7 +3,14 @@
     <div class="col-xs-12">
 
       <div class="table-container">
-        <h1><%= t('categories.header') %></h1>
+        <h1>
+          <% if current_user_admin? %>
+              <%= link_to new_category_path, method: :get do%>
+                  <span class='large-text glyphicon glyphicon-plus table-add-button pull-left'></span>
+              <% end %>
+              <% end %>
+          <%= t('categories.header') %>
+        </h1>
         <table class="table">
           <thead>
           <tr>
@@ -11,6 +18,10 @@
             <td><%= t('categories.name') %></td>
             <td><%= t('categories.created') %></td>
             <td><%= t('categories.updated') %></td>
+            <% if current_user_admin? %>
+                <td></td>
+                <td></td>
+            <% end %>
           </tr>
           </thead>
           <tbody>
@@ -18,8 +29,22 @@
               <tr>
                 <td><%= c.icon %></td>
                 <td><%= c.name %></td>
-                <td><%= c.created_at%></td>
-                <td><%= c.updated_at%></td>
+                <td><div class="calendar left"><%= c.created_at %></div></td>
+                <td><div class="calendar left"><%= c.updated_at %></div></td>
+                <% if current_user_admin? %>
+                    <td><%= link_to edit_category_path(c) do%>
+                          <span class='large-text glyphicon glyphicon-pencil'></span>
+                      <% end %>
+                    </td>
+
+                    <td><%= link_to project_path(c),
+                                    method: :delete,
+                                    data: { confirm: t('categories.delete.sure') } do %>
+
+                          <span class='large-text glyphicon glyphicon-remove'></span>
+                      <% end %>
+                    </td>
+                <% end %>
               </tr>
           <%end%>
           </tbody>
