--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,12 +3,14 @@
     <div class="col-xs-12">
 
       <div class="table-container">
-        <h1>    <% if current_user_admin? %>
-                    <%= link_to new_project_path, method: :get do%>
-                        <span class='large-text glyphicon glyphicon-plus table-add-button pull-left'></span>
-                    <% end %>
-                <% end %>
-          <%= t('project.index.header') %></h1>
+        <h1>
+          <% if current_user_admin? %>
+            <%= link_to new_project_path, method: :get do%>
+                <span class='large-text glyphicon glyphicon-plus table-add-button pull-left'></span>
+            <% end %>
+          <% end %>
+          <%= t('project.index.header') %>
+        </h1>
         <table class="table datatable" data-info="false">
           <thead>
           <tr>
