Se agrega el eliminar categoría

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -37,7 +37,7 @@
                       <% end %>
                     </td>
 
-                    <td><%= link_to project_path(c),
+                    <td><%= link_to categories_path(c),
                                     method: :delete,
                                     data: { confirm: t('categories.delete.sure') } do %>
 
