--- a/app/views/milestones/_innerform.erb
+++ b/app/views/milestones/_innerform.erb
@@ -66,7 +66,7 @@
                   <%= m.label t('milestones.cannot_assign')%>
               <%else%>
                   <%= m.label t('milestones.assign_to'), class: "control-label" %>:<br>
-                  <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('milestones.select_people'), 'style'=> 'width:100%') %>
+                  <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: 'chzn-select', 'data-placeholder'=> t('milestones.select_people'), 'style'=> 'width:100%') %>
               <%end%>
             </div>
         <% end %>
