--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -71,7 +71,7 @@
         };
 
         $.validate({
-            modules: 'html5, date , toggleDisabled',
+            modules: 'html5, date',
 
             language: myLanguage
 
