--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -86,7 +86,7 @@
                     <% end %>
                   </select>
 
-                  <%= button_tag t('project.assign.submit'), options= :type => 'submit', id: "buttonTwo" %>
+                  <%= button_tag t('project.assign.submit'), :type => 'submit', id: "buttonTwo" %>
                <% end %>
               <% end%>
             </td>
