--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -78,17 +78,29 @@
 
 #profile-card {
 
+    h1, h2 {
+        text-transform: capitalize;
+    }
+
+
     h1 {
         margin-top: 0;
         font-size: 20px;
     }
     h2 {
-        margin-top: 0px;
+        margin-top: 0;
         font-size: 13px;
     }
 
     h4 {
         text-transform: uppercase;
+    }
+
+    .edit {
+        position: absolute;
+        color: #19c8ab;
+        top:15px;
+        right: 23px;
     }
 
 }
