--- a/app/views/people/_profile_card.erb
+++ b/app/views/people/_profile_card.erb
@@ -7,7 +7,7 @@
   <h1><%= @name %>
   <% if current_user_admin? %>
     <%= link_to edit_person_path(@identifier) do %>
-      <span class="large-text edit glyphicon glyphicon-edit" style="color:yellowgreen"></span>
+      <span class="large-text edit glyphicon glyphicon-edit"></span>
     <% end %>
   <% end %>
   </h1>
