--- a/app/views/people/_profile_card.erb
+++ b/app/views/people/_profile_card.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <h1><%= @name %>
-  <% if current_user_admin? %>
+  <% if can_view_person? @identifier %>
     <%= link_to edit_person_path(@identifier) do %>
       <span class="large-text edit glyphicon glyphicon-edit" style="color:yellowgreen"></span>
     <% end %>
