--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -76,6 +76,20 @@
     }
 }
 
+.generate-milestones{
+    line-height: 25px;
+
+    background-color: $peterriver-focus;
+    text-decoration: none;
+    padding: 6px;
+    border-bottom: solid 0px transparent;
+    text-align: center;
+    display: block;
+    margin-bottom: 30px;
+
+    color: white;
+}
+
 #profile-card {
 
     h1 {
