--- a/app/views/templates/_generate.html.erb
+++ b/app/views/templates/_generate.html.erb
@@ -1,22 +1,26 @@
-<div class="generate-milestones">
-    <b><span class="glyphicon glyphicon-check"></span> <%= t('templates.generate.header') %></b>
-</div>
 
-<form action='<%=root_path%>' class='timeline-form main-form' data-toggle='validator'>
-  <div class="form-group">
-    <br>
-    <label><%=t('templates.select')%></label>
-    <br>
-    <select class="chzn-select" style="width:100%" >
-      <%@temps.each do |t|%>
-          <option value=<%=t.id%> ><%=t.title%></option>
-      <%end%>
-    </select>
-  </div>
+  <form action='<%=root_path%>' class='timeline-form main-form slide-on-click clearfix toggle-disabled' data-toggle='validator'>
 
+    <h1 class=""><span class="glyphicon glyphicon-check"></span> <%= t('templates.generate.header') %></h1>
 
-  <input type="submit" value="<%=t('templates.generate.submit')%>" class="btn ">
-</form>
+    <div class="form-slide">
+        <div class="row">
+          <div class="form-group">
+
+              <label><%=t('templates.select')%></label>
+              <br>
+              <select class="chzn-select category" style="width:100%" >
+                <%@temps.each do |t|%>
+                    <option value=<%=t.id%> ><%=t.title%></option>
+                <%end%>
+              </select>
+
+          </div>
+        </div>
+
+        <button type="submit" class="btn btn-default" id="submitg"><%=t('templates.generate.submit')%></button>
+    </div>
+  </form>
 
 <script>
     $(".chzn-select").chosen();
