--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -24,7 +24,7 @@
                   <%= m.title %>
                 </td>
                 <td class="description_row">
-                  <%= m.description.truncate(50) %>
+                  <%= m.description %>
                 </td>
                 <td>
                   <%= m.category.name %>
