Se logra cambiar entre admin y no admin en la lista de usuarios

--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -45,6 +45,7 @@
                         <%= t('common.n') %>
                     <% end %>
                   </td>
+                  <td><%= user_admin(p,:right) %></td>
                   <td>
                     <% if current_user_admin? %>
                       <%= link_to edit_person_path(p) do %>
