--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -12,7 +12,7 @@
 
           <div class="form-group">
             <%= f.label t('milestones.description'), class: "control-label" %>
-            <%= f.text_area :description, class: "form-control", 'data-validation': "required" %>
+            <%= f.text_area :description, class: "form-control" %>
           </div>
 
 
