--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -3,27 +3,34 @@
     <div class="card-col col-xs-4 col-xs-offset-4">
       <%= form_for @person, html: { class:'main-form','data-toggle': 'validator'} do |f| %>
         <h1><span class="glyphicon glyphicon-user"></span><%= t('people.edit.header') %></h1>
+
         <div class="form-group">
           <%= f.label t('people.new.name'), class: "control-label" %>
           <%= f.text_field :name, class: "form-control", 'data-validation': "required" %>
         </div>
+
         <div class="form-group">
           <%= f.label t('people.new.email'), class: "control-label" %>
           <%= f.text_field :email, class: "form-control", 'data-validation': "required email"%>
-
         </div>
+
+        <div class="form-group tech_role">
+          <%= f.label 'dasdsa' %>
+          <%= f.select :tech_role_id, @roles, {include_blank: true}, {:multiple => false , 'data-placeholder'=> t('person.add_tech_role'), 'style'=> 'width:100%'} %>
+        </div>
+
         <div class="row">
           <div class="form-group col-xs-6">
             <%= f.label t('people.new.cellphone'), class: "control-label" %>
             <%= f.text_field :cellphone, class: "form-control"%>
-
           </div>
+
           <div class="form-group col-xs-6">
             <%= f.label t('people.new.telephone'), class: "control-label" %>
             <%= f.text_field :phone, class: "form-control" %>
-
           </div>
         </div>
+
         <div class="row">
           <div class="form-group col-xs-6">
             <%= f.label t('people.new.birth_date'), class: "control-label" %>
