--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -18,8 +18,9 @@
           </div>
 
           <div class="form-group">
-            <%= f.label 'sada' %>
-            <%= f.select :tech_role_id, @roles, {include_blank: true}, {:multiple => false, 'data-placeholder'=> t('person.add_tech_role'), 'style'=> 'width:100%'} %>
+            <%= f.label t('people.new.role'), class: "small_label" %>
+            <br>
+            <%= select_tag(:tech_role_id, options_from_collection_for_select(@roles, :id, :name), :include_blank=>true, :multiple => false, class: "chosen", 'data-placeholder'=> t('people.add_tech_role'), 'style'=> 'width:100%') %>
           </div>
 
           <div class="row">
